--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
-   <string-array name="Gender">
-       <item name="Male">Male</item>
-       <item name="Female">Female</item>
-       <item name="Other">Other</item>
-   </string-array>
+    <string-array name="Gender">
+        <item name="Male">Male</item>
+        <item name="Female">Female</item>
+        <item name="Other">Other</item>
+    </string-array>
     <string name="app_name">Static</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
